--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Italianno&family=Splash&display=swap');
+
+body{
+       background-image: url(/assets/img/medium-fire-photo-1920\ x\ 2400.jpg);
+}
 #logo {
        font-family: Homemade Apple, Arial;
+       color: white;
+}
+
+nav {
+       position: absolute;
+       top: 42px;
+       right: 16px;
+       width: 200px;
+       letter-spacing: 1px;
+       word-spacing: 10px;
+       font-family: Italianno;
+       font-size: x-large;
+       font-weight: 500;
+       color: white;
 }
