--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body{
        background-image: url(/assets/img/medium-fire-photo-1920\ x\ 2400.jpg);
+       background-size: cover;
 }
 #logo {
        font-family: Homemade Apple, Arial;
