--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@ body{
        background-image: url(/assets/img/medium-fire-photo-1920\ x\ 2400.jpg);
        background-size: cover;
 }
+
+/*Logo*/
+
 #logo {
        font-family: Homemade Apple, Arial;
        color: #e7680d;
@@ -30,6 +33,7 @@ ul{
        overflow: hidden;
        background-color: #251319;
 }
+
 li {
        display: inline;
 }
@@ -37,7 +41,7 @@ li {
 li a {
        color: #e7680d;
        font-family: Italianno;
-       font-size: x-large;
+       font-size: xx-large;
        float: right;
        text-align: center;
        display: block;
@@ -52,13 +56,52 @@ li a:hover {
 /*Three clickable images for tutorial videos*/
 
 img {
-       width: max-content;
-       height: 500px;
-       margin-left: 400px;
-       margin-bottom: 50px;
-       border: 2px solid #e7680d;
-       border-radius: 10px;
-       animation-name: img-zoom;
-       animation-duration: 5s;
-       animation-fill-mode: forwards;
+       max-width: 100%;
+       height: 450px;
+       display: block;
+       margin-left: auto;
+       margin-right: auto;
+       width: 50%;
 }
+
+/*Image hover fade with text*/
+
+.fade-box {
+       position: relative;
+       width: 50%;
+}
+
+.image {
+       opacity: 1;
+       display: block;
+       width: 100%;
+       height: auto;
+       transition: .5s ease;
+       backface-visibility: hidden
+}
+
+.middle {
+       transition: .5s ease;
+       opacity: 0;
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+       -ms-transform: translate(-50%, -50%);
+}
+
+.fade-box:hover .image {
+       opacity: 0.3;
+}
+
+.fade-box:hover .middle {
+       opacity: 1;
+}
+
+.text {
+       background-color: #e7680d;
+       color: #251319;
+       font-size: 20px;
+       padding: 16px 32px;
+}
+
