--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,13 @@ img {
        padding: 16px 32px;
 }
 
+/*Video*/
+
+.yt-video {
+       width: 1280px;
+       height: 720px;
+       margin-left: auto;
+       margin-right: auto;
+       
+}
+
