--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,9 +69,14 @@ img {
 .fade-box {
        position: relative;
        width: 50%;
+       margin-left: auto;
+       margin-right: auto;
+       padding-top: 10px;
 }
 
 .image {
+       margin-left: auto;
+       margin-right: auto;
        opacity: 1;
        display: block;
        width: 100%;
@@ -112,6 +117,6 @@ img {
        height: 720px;
        margin-left: auto;
        margin-right: auto;
-       
+
 }
 
