--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ aside {
 
 /* Navigation Bar */
 
-ul{
+.nav-bar{
        list-style-type: none;
        margin: 0;
        padding: 0;
@@ -34,11 +34,11 @@ ul{
        background-color: #251319;
 }
 
-li {
+.nav-bar li {
        display: inline;
 }
 
-li a {
+.nav-bar li a {
        color: #e7680d;
        font-family: Italianno;
        font-size: xx-large;
@@ -48,7 +48,7 @@ li a {
        padding: 8px;
 }
 
-li a:hover {
+.nav-bar li a:hover {
        background-color: #e7680d;
        color: #251319;
 }
@@ -129,3 +129,33 @@ img {
        width: 100%;
 }
 
+/* Footer */
+
+footer {
+       width: 100%;
+       height: 60px;
+       background-color: #251319;
+}
+
+/* Social media links */
+
+.social-links {
+       text-align: center;
+}
+
+.social-links li {
+       display: inline;
+}
+
+.social-links i { 
+         font-size: 160%; 
+         margin: 10px;
+         padding: 10px;
+         color: #e7680d;
+}
+
+.social-links i:hover {
+       background-color: #e7680d;
+       color: #251319;
+
+}
