--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,12 +127,13 @@ img {
 /*Video*/
 
 iframe {
-       position: relative;
-       left: 250px ;
        margin-top: 25px;
        margin-bottom: 25px;
-       
+}
 
+.video-container {
+         padding-left: 13%;
+         padding-right: 13%;
 }
 
 /* Footer */
@@ -141,7 +142,6 @@ footer {
        width: 100%;
        height: 60px;
        flex-shrink: 0;
-       background-color: #251319;
 }
 
 /* Social media links */
@@ -183,7 +183,9 @@ input[type=text], input[type=email], select, textarea {
        resize: vertical;
 }
 
-input[type=submit] {
+button[type=submit] {
+       font-family: italianno;
+       font-size: 30px;
        background-color: #251319;
        color: #e7680d;
        padding: 12px 20px;
@@ -192,7 +194,7 @@ input[type=submit] {
        cursor: pointer;
 }
 
-input[type=submit]:hover {
+button[type=submit]:hover {
        background-color: #e7680d;
        color: #251319;
 }
