--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,19 +126,30 @@ img {
 
 /*Video*/
 
+#video-container {
+       max-width: 1200px;
+       margin: 50px auto;
+       display: flex;
+       flex-wrap: wrap;
+       align-items: flex-start;
+       gap: 20px;
+}
+
+
+
+#yt-video1, #yt-video2, #yt-video3 {
+       width: 100%;
+       height: auto;
+       padding-bottom: 56.25%;
+       position: relative;
+    
+}
+
 iframe {
        position: absolute;
        width: 100%;
        height: 100%;
-}
-
-#yt-video1, #yt-video2, #yt-video3 {
-    width: 80%;
-    height: 0;
-    padding-bottom: 56.25%;
-    position: relative;
-    margin-top: 50px;
-    margin-bottom: 100px;
+           
 }
 
 /* Footer */
@@ -226,4 +237,10 @@ button[type=submit]:hover {
 
 /* Media Queries*/
 
-/* Large and Medium screens - 1200px wide and down*/
+/* Medium screens - 950px wide and down*/
+
+@media screen and (max-width: 950px) {
+       #yt-video1, #yt-video2, #yt-video3 {
+              width: 
+          }
+}
