--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,15 +16,83 @@ body{
        text-shadow: 3px 3px 6px #b63a0e;
 }
 
-/* Greeting bar (will become hero slideshow */
+/* Hero slideshow */
 
-aside {
-       font-family: Italianno;
-       font-size: x-large;
-       text-align: center;
-       padding: 20px;
+.slideshow-container {
+       max-width: 1200px;
+       position: relative;
        margin: auto;
-       background-color: #e7680d;
+}
+
+.mySlides {
+       display: none;
+}
+
+.prev, .next {
+       cursor: pointer;
+       position: absolute;
+       top: 50%;
+       width: auto;
+       margin-top: -22px;
+       padding: 16px;
+       color: white;
+       font-weight: bold;
+       font-size: 18px;
+       transition: 0.6s ease;
+       border-radius: 0 3px 3px 0;
+       user-select: none;
+}
+
+.next {
+       right: 0;
+       border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+       background-color: rgba(0,0,0,0.8);
+}
+
+.capt-text {
+       color: #e7680d;
+       font-size: 15px;
+       padding: 8px 12px;
+       position: absolute;
+       bottom: 8px;
+       width: 100%;
+       text-align: center;
+}
+
+.numbertext {
+       color: #e7680d;
+       font-size: 12px;
+       padding: 8px 12px;
+       position: absolute;
+       top: 0;
+}
+
+.dot {
+       cursor: pointer;
+       height: 15px;
+       width: 15px;
+       margin: 0 2px;
+       background-color: #251319;
+       border-radius: 50%;
+       display: inline-block;
+       transition: background-color 0.6 ease;
+}
+
+.active, .dot:hover {
+       background-color: #251319;
+}
+
+.fade {
+       animation-name: fade;
+       animation-duration: 1.5s;
+}
+
+@keyframes fade {
+       from {opacity: .4;}
+       to {opacity: 1;}
 }
 
 /* Navigation Bar */
