had to remove code for hero slideshow idea due to java script needed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body{
        text-shadow: 3px 3px 6px #b63a0e;
 }
 
-/* Hero slideshow */
+/* Hero image */
 
 .slideshow-container {
        max-width: 1200px;
