--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,84 +16,58 @@ body{
        text-shadow: 3px 3px 6px #b63a0e;
 }
 
-/* Hero image */
+/*Hero Images*/
 
-.slideshow-container {
-       max-width: 1200px;
-       position: relative;
-       margin: auto;
-}
-
-.mySlides {
-       display: none;
-}
-
-.prev, .next {
-       cursor: pointer;
-       position: absolute;
-       top: 50%;
-       width: auto;
-       margin-top: -22px;
-       padding: 16px;
-       color: white;
-       font-weight: bold;
-       font-size: 18px;
-       transition: 0.6s ease;
-       border-radius: 0 3px 3px 0;
-       user-select: none;
-}
-
-.next {
-       right: 0;
-       border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-       background-color: rgba(0,0,0,0.8);
-}
-
-.capt-text {
-       color: #e7680d;
-       font-size: 15px;
-       padding: 8px 12px;
-       position: absolute;
-       bottom: 8px;
+#hero-outer {
+       height: 585px;
        width: 100%;
-       text-align: center;
+       overflow: hidden;
+       position: relative;
+       padding-top: 50px;
+       padding-bottom: 100px;
+       border: 5px #e7680d;
 }
 
-.numbertext {
-       color: #e7680d;
-       font-size: 12px;
-       padding: 8px 12px;
+#cover-text, #covertext h2 {
+       color: rgba(231, 104, 13, 1);
+}
+
+#hero-image {
+             height: 585px;
+             width: 100%;
+             background: url('../img/boerewors1.jpg') no-repeat center center;
+
+/*animation for zoom effect*/
+animation-name: hero-zoom;
+animation-duration: 5s;
+animation-fill-mode: forwards;
+}
+
+/*creates level of zoom for hero image*/
+
+@keyframes hero-zoom {
+       from{
+              transform: scale(1);
+       }
+       to{
+              transform: scale(1.1);
+       }
+}
+
+#cover-text {
+       font-size: 110%;
+       font-family: italianno;
+       text-transform: uppercase;
+       letter-spacing: 4px;
+       width: 1000px;
+       height: 50px;
+       padding-left: 10px;
+       background-color: rgba(0, 16, 26, .7);
+       right: 150px;
+       bottom: 150px;
        position: absolute;
-       top: 0;
 }
 
-.dot {
-       cursor: pointer;
-       height: 15px;
-       width: 15px;
-       margin: 0 2px;
-       background-color: #251319;
-       border-radius: 50%;
-       display: inline-block;
-       transition: background-color 0.6 ease;
-}
-
-.active, .dot:hover {
-       background-color: #251319;
-}
-
-.fade {
-       animation-name: fade;
-       animation-duration: 1.5s;
-}
-
-@keyframes fade {
-       from {opacity: .4;}
-       to {opacity: 1;}
-}
 
 /* Navigation Bar */
 
@@ -127,12 +101,6 @@ body{
        text-shadow: 4px 4px 6px #00101a;
 }
 
-/*Hero Images*/
-
-#hero-image {
-             max-width: 100%;
-             width: 100%;
-}
 
 /*Three clickable images for tutorial videos*/
 
