--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,10 @@ body{
        text-shadow: 3px 3px 6px #b63a0e;
 }
 
-/*Hero Images*/
+/* Hero Image */
 
 #hero-outer {
-       height: 585px;
+       height: auto;
        width: 100%;
        overflow: hidden;
        position: relative;
@@ -79,7 +79,7 @@ animation-fill-mode: forwards;
        font-family: Special Elite;
        font-size: 50px;
        text-align: center;
-
+       
        color: #00101a;
        background-color: #e7680d;
        text-shadow: 3px 3px 6px #00101a;
@@ -125,7 +125,9 @@ animation-fill-mode: forwards;
 img {
        max-width: 100%;
        height: 450px;
-       display: block;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
        margin-left: auto;
        margin-right: auto;
        width: 50%;
@@ -302,11 +304,65 @@ button[type=submit]:hover {
 
 /* Media Queries */
 
-/* Mobile Phones  320px — 480px */
+/* Mobile Phones (600px and down) */
 
-@media screen and (max-width: 480px ) {
+@media screen and (max-width: 600px ) { 
 
-       .fade-box {
+       /*Logo*/
+
+#logo {
+       text-align: center;
+}
+
+/* Navigation Bar */
+
+.nav-bar{
+       
+       margin-right: 16%;
+       
+}
+
+       /*Hero Images*/
+
+#hero-outer {
+
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       padding: 30px;
+}
+
+#hero-image {
+
+       height: 300px;
+       background-size: 100% 100%;
+     }
+
+#cover-text {
+       font-size: 12px;
+       font-family: Special Elite;
+       letter-spacing: 4px;
+
+       width: 300px;
+       height: 95px;
+
+       padding-left: 10px;
+
+       top: 55%;
+       left: 40%;
+}
+/* Middle content */
+
+#middle-content {
+       font-size: 30px;
+       height: auto;
+       padding: 0;
+       margin: 0;
+   }
+
+/*Three clickable images for tutorial videos*/
+
+      .fade-box {
               position: relative;
               width: 100%;
               margin-left: auto;
@@ -330,7 +386,34 @@ button[type=submit]:hover {
               padding: 5px;
               color: #e7680d;
      }
+
+/* Contact Form */
+
+.container {
+       background-color: #00101a;
+       padding: 5px;
+       width: 95%;
+       margin-left: 2%;
+       margin-top: 20px;
+   }
+
+   .container h2 {
+       font-family: Special Elite;
+       font-size: 33px;
+       color: #e7680d;
+       text-align: center;
+   }
+
 }
 
-/* Tablets 481px — 768px */
+/* Tablets (600px and up) */
 
+@media screen and (min-width: 600px ) {
+
+}
+
+/* Mobile Phones (992px and up)*/
+
+@media screen and (min-width: 992px ) {
+       
+}
