--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,21 +308,15 @@ button[type=submit]:hover {
 
 @media screen and (max-width: 600px ) { 
 
-       /*Logo*/
-
 #logo {
        text-align: center;
 }
-
-/* Navigation Bar */
 
 .nav-bar{
        
        margin-right: 16%;
        
 }
-
-       /*Hero Images*/
 
 #hero-outer {
 
@@ -351,7 +345,6 @@ button[type=submit]:hover {
        top: 55%;
        left: 40%;
 }
-/* Middle content */
 
 #middle-content {
        font-size: 30px;
@@ -360,9 +353,7 @@ button[type=submit]:hover {
        margin: 0;
    }
 
-/*Three clickable images for tutorial videos*/
-
-      .fade-box {
+.fade-box {
               position: relative;
               width: 100%;
               margin-left: auto;
@@ -370,7 +361,7 @@ button[type=submit]:hover {
               padding-top: 10px;
        }
        
-       .text {
+.text {
               background-color: #e7680d;
               display: flex;
               flex-direction: column;
@@ -380,14 +371,12 @@ button[type=submit]:hover {
               font-family: lobster;
               text-decoration: none;   
        }
-       .social-links i { 
+.social-links i { 
               font-size: 160%; 
               margin: 5px;
               padding: 5px;
               color: #e7680d;
      }
-
-/* Contact Form */
 
 .container {
        background-color: #00101a;
@@ -397,20 +386,25 @@ button[type=submit]:hover {
        margin-top: 20px;
    }
 
-   .container h2 {
+.container h2 {
        font-family: Special Elite;
        font-size: 33px;
        color: #e7680d;
        text-align: center;
    }
 
-   .fname, .lname, .email, #comment {
+.fname, .lname, .email, #comment {
        font-size: x-large;
    }
 
-   button[type=submit] {
-       
+button[type=submit] {
+
        font-size: 25px;
+   }
+
+   .image {
+       margin-left: auto ;
+       margin-right: auto;
    }
 
 }
@@ -419,10 +413,57 @@ button[type=submit]:hover {
 
 @media screen and (min-width: 600px ) {
 
+       .container {
+              padding: 20px;
+              width: 70%;
+              margin-left: 10%;
+              margin-top: 20px;
+          }
+          .container h2 {
+              font-family: Special Elite;
+              font-size: 33px;
+              color: #e7680d;
+              text-align: center;
+          }
+       
+       .fname, .lname, .email, #comment {
+              font-size: x-large;
+          }
+       
+       button[type=submit] {
+       
+              font-size: 25px;
+          }
+
+       #cover-text {
+              font-size: 30px;
+              font-family: Special Elite;
+              letter-spacing: 4px;
+              width: 400px;
+              height: 240px;
+              padding-left: 10px;
+              background-color: rgba(0, 16, 26, .7);
+              position: absolute;
+              top: 45%;
+              left: 52%;
+          }
 }
 
-/* Mobile Phones (992px and up)*/
+/* Desktop and large screens (992px and up)*/
 
 @media screen and (min-width: 992px ) {
+     
+       .container {
+              background-color: #00101a;
+              padding: 20px;
+              width: 50%;
+              margin-left: 25%;
+              margin-top: 20px;
+       }
        
+        .fname, .lname, .email, #comment {
+              font-family: Special Elite;
+                  font-size: xx-large;
+                  color: #e7680d;
+       }
 }
