--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ iframe {
        position: absolute;
        width: 100%;
        height: 100%;
+       border: 0;
            
 }
 
@@ -249,6 +250,32 @@ footer {
 .social-links i:hover {
        background-color: #e7680d;
        color: #251319;
+
+}
+
+/* changes due to visibility */
+
+.social-links-p3 {
+       text-align: center;
+}
+
+.social-links-p3 li {
+       display: inline;
+       color: #251319;
+       font-family: Special Elite;
+       font-size: large;
+}
+
+.social-links-p3 i { 
+         font-size: 160%; 
+         margin: 10px;
+         padding: 10px;
+         color: #251319;
+}
+
+.social-links-p3 i:hover {
+       background-color: #251319;
+       color: #e7680d;
 
 }
 
