fixed typo on comment page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,7 +453,7 @@ button[type=submit] {
               text-align: center;
           }
        
-       .fname, .lname, .email, #comment {
+       .fname, .lname, .email, #subject {
               font-size: x-large;
           }
        
